FC-297 fix: header modal on mobile

--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -70,6 +70,7 @@ input {
   border-bottom: 1px solid var(--color-dark-500);
 
   @media (max-width: 767px) {
+    margin-left: 0;
     padding: 10px;
   }
 }
